Fix spacing issues for filter nav and bounty page

--- a/src/containers/Bounty/Bounty.module.scss
+++ b/src/containers/Bounty/Bounty.module.scss
@@ -183,7 +183,6 @@
   margin-left: -$m-spacing;
   margin-right: -$m-spacing;
   padding: $l-spacing $m-spacing;
-  width: 100%;
 
   @media only screen and (min-width: 35em) {
     margin-top: -$l-spacing;
