--- a/src/layout/App/App.module.scss
+++ b/src/layout/App/App.module.scss
@@ -65,6 +65,6 @@
 }
 
 .filterWrapper {
-  max-width: $filterNav-width-fixed;
+  max-width: $filterNav-width-large;
   width: 70vw;
 }
